Fix issue with ask question button shifting on hover

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@
   border-radius: 0.5em;
   text-decoration: none;
   transition: background-color 0.3s, color 0.3s;
+  border: 2px solid #28a74500;
 }
 
 #ask-question-button:hover {
